removed whole div of project1

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 
     <h1 class="section4-title">Some of my works</h1><br>
     <section class="section4" id="project-section">
-        <div class="project" id="project1">
-<!--             <div class = "box5" id="project-description">
+<!--         <div class="project" id="project1">
+            <div class = "box5" id="project-description">
                 <h5><ul>
                     <li>Made responsive restaurant website.</li>
                     <li>Has smooth animation on scroll throughout the website.</li>
@@ -172,11 +172,11 @@
                     <button class="project-btn" id="box5-btn1"><a href="https://bitu99.github.io/responsive-restaurant-website/">Link</a></button>
                     <button class="project-btn" id="box5-btn2"><a href="https://github.com/bitu99/responsive-restaurant-website">Peek into code </a></button>
                     </h5>
-            </div> -->
-<!--             <div class="box6">
+            </div>
+            <div class="box6">
                 <img src="project1-img.png" alt="project1">
-            </div> -->
-        </div>
+            </div>
+        </div> -->
         <div class="project" id="project2">
             <div class="box7">
                 <img src="project2-img.png" alt="project2">
