--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
     <section class = "section1" id="home-section">
         <div class="box1">
-            <div style="display: none;" data-aos="fade-left" class="nav-part3">
+            <div data-aos="fade-left" 
+            data-aos-easing="linear"
+            data-aos-duration="350" style="display: none;" class="nav-part3">
                 <ul>
                     <button><a href="#about-me"><li>About</li></a></button>
                     <button><a href="#section3"><li>Skills</li></a></button>
