--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section class="section2" id="about-me">
         
         <div class="box3">
-            <img src="1671517756996.png" alt="">
+            <img src="myImage3.jpeg" alt="">
         </div>
 
         
