--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </section><br><br>
 
     <!-- <h1 class="skill-text">Skills, I have</h1> -->
-    <section style = "display: none;" class="skill-slider" id="section3">
+    <section class="skill-slider" id="section3">
         <div class="box" id="box1">
             <h1>Skills,<br> I have</h1>
         </div>
