--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="progress-box"><div id="progress12"></div></div>
             </div>
         </div>
-    </section>
+    </section><br><br><br>
 
     <!-- -------------project-section----------- -->
 
