email-working using formspree

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal portfolio</title>
     <link rel="stylesheet" href="style.css"><!DOCTYPE html>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -273,7 +274,8 @@
         <div class="form">
             <h1 style="font-size: 4vh;">Drop me a message</h1><br>
         
-            <form action="main.php" method="post" autocomplete="off">
+            <form action="https://formspree.io/f/xeqbplqb"
+            method="POST" autocomplete="off">
                 <input type="text" name="name" placeholder="Your name">
         
                 <input type="email" name="email" placeholder="Your email">
