--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         <div id="custom-modal" class="modal">
               <div class="modal-content">
               <span class="close" id="close-modal">X</span>
-              <p>Email sent successfully!</p>
+              <p>Email sent!</p>
         </div>
 </div>
 
